--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     </head>
     <body class="container">
         <h1>E-mail Sender</h1>
-        <form action="http://192.168.99.100:8080" method="POST">
+        <form action="http://192.168.99.100/api" method="POST">
             <div>
                 <label for="assunto">Assunto</label>
                 <input type="text" name="assunto">
